--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 }
 
                 function getBalance(){
-                    document.getElementById("myBalance").innerText = web3.eth.getBalance(web3.eth.accounts[0]);
+                    document.getElementById("myBalance").innerText = web3.fromWei(web3.eth.getBalance(web3.eth.accounts[0]), "ether");
                 }
             </script>
     </head>
