--- a/SimpleDAPP.html
+++ b/SimpleDAPP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple DAPP</title>
-    <scrip <script src="web3.js/dist/web3.min.js"></script>
+    <script src="web3.js/dist/web3.min.js"></script>
     <script type="text/javascript">
                 if (typeof web3 !== 'undefined') {
                     web3 = new Web3(web3.currentProvider);
