--- a/SimpleDAPP.html
+++ b/SimpleDAPP.html
@@ -19,15 +19,42 @@
 
                 function getMyNum(){
                     //document.getElementById("myBalance").innerText = web3.fromWei(web3.eth.getBalance(web3.eth.accounts[0]), "ether");
-                    document.getElementById("myBalance").innerText = contract_instance.getBalance();
+                    document.getElementById("myBalance").innerText = contract_instance.getBalance().toNumber();
                 }
                 function getOwner(){
-                    document.getElementById("theOwner").innerText = contract_instance.getOwner();
+                    document.getElementById("theOwner").innerText = contract_instance.getOwner().toNumber();
                 }
                 function ChangeNum(){
-                    //
+                    // simple incrementer for now
+                    var currentNum = contract_instance.getBalance().toNumber();
+                    currentNum++;
+                    web3.personal.unlockAccount(web3.eth.accounts[0], 'password');
+                    contract_instance.changeNumber(currentNum, {from: web3.eth.accounts[0], gas: 200000, function (error, result) {
+                        if(error){
+                            console.error(error);
+                        } else {
+                            var txHash = result;
+                            console.log(txHash);
+                            callWhenMiner(txHash, getMyNum());
+                        }
+                    }
+                    });
+                }
 
-
+                function callWhenMined(txHash, callback){
+                    web3.eth.getTransactionReceipt(txHash, function (error, rcpt) {
+                        if (error) {
+                            console.error(error);
+                        } else {
+                            if (rcpt == null) {
+                                setTimeout (function() {
+                                    callWhenMined(txHash, callback);
+                                }, 500);
+                            } else {
+                                callback();
+                            }
+                        }
+                    });
                 }
             </script>
 </head>
@@ -53,10 +80,10 @@
         </tr>
         <tr>
             <td>
-                <input type="text" id="newNum">
+                <button onclick="ChangeNum()">Increment Number</button>
             </td>
             <td>
-                <button onclick="ChangeNum(getElementById('newNum').value)">Update Number</button>
+                <span></span>
             </td>
         </tr>
     </table>
